--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "6.4.*",
+        "symfony/dom-crawler": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/yaml": "6.4.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
